docs(compiler): add documentation

--- a/examples/index.html
+++ b/examples/index.html
@@ -20,7 +20,11 @@
     data: {
       message: 'Hello Vue!'
     },
+    beforeCreate() {
+      console.log(this)
+    },
     created() {
+      console.log(this)
       this.asd()
     },
     mounted() {
